# transferModel

./: CMakeLists.txt  models.py
models/: net.pt
